--- a/about.html
+++ b/about.html
@@ -7,22 +7,24 @@
     <link rel="stylesheet" href="style.css">  
 
 </head>
+<header> 
+    <nav>
+        <ol class="sections">
+            <li class="section"><a href="home.html">Home</a></li>
+            <li class="section"><a href="portfolio.html">Portfolio</a></li>
+            <li class="section"><a href="contact.html">Contact</a></li>
+        </ol>
+        <button onclick="myFunction()">Dark</button>
+        <script>
+            function myFunction() {
+               var element = document.body;
+               element.classList.toggle("dark-mode");
+            }
+            </script>
+    </nav>
+</header>
 <body>
-    <header> 
-        <nav>
-            <ol class="sections">
-                <li class="section"><a href="home.html">Home</a></li>
-                <li class="section"><a href="portfolio.html">Portfolio</a></li>
-            </ol>
-            <button onclick="myFunction()">Dark</button>
-            <script>
-                function myFunction() {
-                   var element = document.body;
-                   element.classList.toggle("dark-mode");
-                }
-                </script>
-        </nav>
-    </header>
+  
     <h1>
         I have a passion for anything shoe related. 
     </h1>
