--- a/home.html
+++ b/home.html
@@ -6,22 +6,24 @@
     <title>Personal Website </title>
     <link rel="stylesheet" href="style.css">  
 </head>
+<header> 
+    <nav>
+        <ol class="sections">
+            <li class="section"><a href="about.html">About</a></li>
+            <li class="section"><a href="portfolio.html">Portfolio</a></li>
+            <li class="section"><a href="contact.html">Contact</a></li>
+        </ol>
+        <button onclick="myFunction()">Dark</button>
+        <script>
+            function myFunction() {
+               var element = document.body;
+               element.classList.toggle("dark-mode");
+            }
+            </script>
+    </nav>
+</header>
 <body>
-    <header> 
-        <nav>
-            <ol class="sections">
-                <li class="section"><a href="about.html">About</a></li>
-                <li class="section"><a href="portfolio.html">Portfolio</a></li>
-            </ol>
-            <button onclick="myFunction()">Dark</button>
-            <script>
-                function myFunction() {
-                   var element = document.body;
-                   element.classList.toggle("dark-mode");
-                }
-                </script>
-        </nav>
-    </header>
+
         <h1>
             Sports & Shoes 
             <p> Intrest are in Sports and shoes mainly. </p>
