Changed the form position and changed nav. changed dark mode button

--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
             <li class="section"><a href="about.html">About</a></li>
             <li class="section"><a href="portfolio.html">Portfolio</a></li>
         </ol>
-        <button onclick="myFunction()">Dark</button>
+        <button onclick="myFunction()">Mode Switch</button>
         <script>
             function myFunction() {
                var element = document.body;
@@ -23,6 +23,20 @@
     </nav>
 </header>
   <body>
-    
+    <h1 class="contact"> Please leave your name and email so that we can be in touch</h1>
+    <form>
+      <div class="form-row">
+        <div class="col">
+          <input type="text" class="form-control" placeholder="First name">
+        </div>
+        <div class="col">
+          <input type="text" class="form-control" placeholder="Last name">
+        </div>
+        <div class="col">
+          <input type="text" class="form-control" placeholder="Email">
+        </div>
+      </div>
+      <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
   </body>
 </html>
