--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
             <li class="section"><a href="portfolio.html">Portfolio</a></li>
             <li class="section"><a href="contact.html">Contact</a></li>
         </ol>
-        <button onclick="myFunction()">Dark</button>
+        <button onclick="myFunction()">Mode Switch</button>
         <script>
             function myFunction() {
                var element = document.body;
