--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
             <li class="section"><a href="about.html">About</a></li>
             <li class="section"><a href="contact.html">Contact</a></li>
         </ol>
-        <button onclick="myFunction()">Dark</button>
+        <button onclick="myFunction()">Mode Switch</button>
         <script>
             function myFunction() {
                var element = document.body;
