--- a/contact.html
+++ b/contact.html
@@ -6,25 +6,25 @@
     <title>Get in contact with me</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <header> 
-    <nav>
+  <div class="header"> 
+    <div class="nav">
         <ol class="sections">
             <li class="section"><a href="home.html">Home</a></li>
             <li class="section"><a href="about.html">About</a></li>
             <li class="section"><a href="portfolio.html">Portfolio</a></li>
         </ol>
-        <button onclick="myFunction()">Mode Switch</button>
+        <button onclick="Switch()">Mode Switch</button>
         <script>
-            function myFunction() {
-               var element = document.body;
+            function Switch() {
+               const element = document.body;
                element.classList.toggle("dark-mode");
             }
             </script>
-    </nav>
-</header>
+    </div>
+</div>
   <body>
     <h1 class="contact"> Please leave your name and email so that we can be in touch</h1>
-    <form>
+    <form action="submission.html">
       <div class="form-row">
         <div class="col">
           <input type="text" class="form-control" placeholder="First name">
@@ -35,8 +35,26 @@
         <div class="col">
           <input type="text" class="form-control" placeholder="Email">
         </div>
+        <div class="col">
+          <input type="text" class="form-control" placeholder="Message">
+        </div>
       </div>
-      <button type="submit" class="btn btn-primary">Submit</button>
+      <button onclick="Submit()">Submit</button>
+      </script>
     </form>
+    <script>
+      window.onscroll = function() {myFunction()};
+      
+      const nav = document.getElementById("nav");
+      const sticky = nav.offsetTop;
+      
+      function myFunction() {
+        if (window.pageYOffset >= sticky) {
+          nav.classList.add("sticky")
+        } else {
+          nav.classList.remove("sticky");
+        }
+      }
+      </script>
   </body>
 </html>
